--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,69 @@
 body {
-    font-family: 'Handlee', serif;
-    font-size: 1.5em;
+  font-family: handlee, serif;
 }
 
-.navbar-brand {
-    margin-right: 0;
+.navbar {
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.nav-link {
+  padding: 0;
+}
+
+.nav-item .bi {
+  text-align: center;
 }
 
 .navbar-brand img {
-    width: 80%;
-    height: auto;
-}
-
-.navbar-collapse {
-    text-align: center;
+  width: 80%;
+  height: auto;
 }
 
 .title {
-    font-size: 1.3em;
-    text-align: center;
-    margin: 1em;
+  font-size: 1.8em;
+  font-weight: 800;
+  margin: 0.8em;
+  text-align: center;
 }
 
 .card {
-    margin: 1em;
-}
-
-.row-teddy {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  margin: 1em;
 }
 
 figure {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
+
+figcaption {
+  text-align: center;
+  color: black;
+  font-size: 1.4em;
+  margin-top: 0.8em;
+}
+
+.coordonnees {
+  padding: 1em;
+  margin: 0.8em;
+  border: 1px solid black;
+}
+
+.style_input {
+  width: 100%;
+  height: 1em;
+  font-size: 2em;
+  margin-bottom: 0.5em;
+}
+
+.list-inline-item {
+  font-size: 1.5em;
+  font-weight: 600;
+}
+
+@media (min-width: 992px) {
+  .navbar {
+    text-align: left;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
