--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,16 @@ body {
 .card {
   margin: 1em;
 }
+.card-body_teddy {
+  border: 0.8px solid black;
+  margin: 1em;
+}
+
+h2 {
+  text-align: center;
+  font-weight: 600;
+  font-size: 2em;
+}
 
 figure {
   margin-bottom: 0;
@@ -63,6 +73,23 @@ figcaption {
 @media (min-width: 992px) {
   .navbar {
     text-align: left;
+  }
+}
+/* animation */
+.active-teddy {
+  transition: all 0.3s, ease;
+}
+
+.active-contenu {
+  animation: clear 0.5s forwards;
+}
+
+@keyframes clear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
 
