--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,9 @@ h2 {
 input {
   display: block;
   outline: 0;
-  background: rgb(226,226,226);
+  background: rgb(226, 226, 226);
   border-radius: 3px;
-  border: 1px solid rgba(0,0,0,0.3);
+  border: 1px solid rgba(0, 0, 0, 0.3);
   width: 100%;
   height: 2em;
   padding: 10px 0 10px 20px;
@@ -75,7 +75,7 @@ input {
 
 ::placeholder {
   font-size: 0.8em;
-  margin-bottom: 10px
+  margin-bottom: 10px;
   /*margin: 10px 0 0 10px;*/
 }
 
@@ -83,7 +83,7 @@ input {
   display: block;
   margin: 30px auto;
   outline: 0;
-  background: rgb(241, 187, 232);
+  background: rgb(212, 196, 210);
   width: 90%;
   border: 0;
   padding: 15px;
@@ -94,16 +94,21 @@ input {
 }
 
 button:hover {
-  background: rgb(142, 76, 230);
+  background: rgb(222, 214, 233);
 }
 
 button:active {
-  background: rgb(235, 112, 31);
+  background: rgb(145, 218, 160);
 }
 
 .list-inline-item {
   font-size: 1.5em;
   font-weight: 600;
+}
+
+th {
+  font-size: 1.5em;
+  font-weight: 800;
 }
 
 @media (min-width: 992px) {
